[project]
name = "apirest-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas Lima",email = "lucaslimatech98@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "uvicorn[standard] (>=0.48.0,<0.49.0)",
    "databases[aiosqlite] (>=0.9.0,<0.10.0)"
]

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "*"
pytest = "*"
httpx = "*"
pytest-mock = "*"

[tool.pytest.ini_options]
asyncio_mode = "auto"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
